fix(core):  layout bug in top bar for brand section and right section
close #330 - with a better solution, row wasn't going to work all the time

--- a/core/scss/components/top-bar/top-bar.scss
+++ b/core/scss/components/top-bar/top-bar.scss
@@ -66,6 +66,8 @@
         flex: 0 1 auto;
         align-items: center;
         justify-content: flex-end;
+        order: 1;
+        margin-right: rem-calc(16);
 
         .#{$top-bar-class}__user {
           display: flex;
@@ -202,7 +204,6 @@
       @media #{$large-up} {
         flex: 0 1 auto;
         margin-right: 0;
-        margin-left: rem-calc(-16);
       }
 
       @media #{$large-only} {
